Add some todos and call Reformat Code